# rules_dotnet

./: MODULE.bazel  paket.dependencies  rules_dotnet.sln
.bazelci/: presubmit.yml
dotnet/: defs.bzl  extensions.bzl  paket.paket2bazel_dependencies.bzl  paket.rules_dotnet_dev_nuget_packages.bzl  paket.rules_dotnet_nuget_packages.bzl  repositories.bzl
dotnet/private/: common.bzl  compiler_wrapper.sh  providers.bzl  toolchains_repo.bzl
dotnet/private/macros/: register_tfms.bzl
dotnet/private/rules/common/: attrs.bzl  binary.bzl
dotnet/private/rules/csharp/: binary.bzl  library.bzl  nunit_test.bzl  test.bzl
dotnet/private/rules/csharp/actions/: csharp_assembly.bzl
dotnet/private/rules/fsharp/actions/: fsharp_assembly.bzl
dotnet/private/rules/nativeaot/: nativeaot_binary.bzl  nativeaot_pack.bzl
dotnet/private/rules/nuget/: imports.bzl  nuget_archive.bzl  nuget_repo.bzl
dotnet/private/rules/publish_binary/: BUILD.bazel  nativeaot.bzl  publish_binary.bzl
dotnet/private/sdk/: versions.bzl
dotnet/private/sdk/apphost_packs/: apphost_pack_lookup_table.bzl  apphost_packs.bzl  dotnet.apphost_packs.bzl
dotnet/private/sdk/nativeaot_packs/: BUILD.bazel  dotnet.nativeaot_packs.bzl  dotnet.nativeaot_packs_extension.bzl  nativeaot_nuget_pack.bzl  nativeaot_pack_lookup_table.bzl  nativeaot_pack_transition.bzl  nativeaot_packs.bzl
dotnet/private/sdk/runtime_packs/: dotnet.runtime_packs.bzl  runtime_pack_lookup_table.bzl  runtime_packs.bzl
dotnet/private/sdk/targeting_packs/: BUILD.bazel  dotnet.targeting_packs.bzl  targeting_pack_lookup_table.bzl  targeting_pack_transition.bzl  targeting_packs.bzl
dotnet/private/tests/corelib/: BUILD.bazel  mincorlib.cs
dotnet/private/tests/publish/aot_app/: BUILD.bazel  Main.cs
dotnet/private/tests/publish/aot_compat/: BUILD.bazel  Main.cs
dotnet/private/tests/publish/aot_validation/: BUILD.bazel  aot_validation_test.bzl
dotnet/private/tests/publish/nativeaot/: BUILD.bazel  test.sh
dotnet/private/tools/compiler_worker/: BUILD.bazel  Program.cs  WorkerProtocol.cs  worker_protocol.proto
dotnet/settings/: BUILD.bazel
e2e/csc_override/: MODULE.bazel  roslyn.bzl
e2e/csc_override/basic_csharp/: BUILD.bazel  hello.cs
scripts/: update-nuget-packages.sh
