load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
)

# Build with the overridden compiler (Roslyn 4.12.0 from NuGet)
# Use langversion 12.0 since Roslyn 4.12.0 supports up to C# 13
csharp_binary(
    name = "hello",
    srcs = ["hello.cs"],
    langversion = "12.0",
    target_frameworks = ["net11.0"],
)
