load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":targeting_pack.bzl", "targeting_pack")
load(":targeting_packs.bzl", "targeting_packs")

targeting_packs()

label_setting(
    name = "targeting_pack",
    build_setting_default = ":empty_pack",
    visibility = ["//visibility:public"],
)

# Allows downstream modules (e.g. the .NET VMR) to substitute a custom targeting
# pack for project_sdk=default / target_framework=net10.0, overriding the SDK
# pack that targeting_pack_lookup_table.bzl would normally select. The value is
# the absolute label of a target that produces DotnetTargetingPackInfo. An empty
# string (the default) means "use the lookup table".
string_flag(
    name = "default_net10_0_pack_override",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

# This target is only for the default value of the label setting
# and the transition should always transition from it to something else
targeting_pack(
    name = "empty_pack",
    packs = [],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "dotnet.targeting_packs",
    srcs = ["dotnet.targeting_packs.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = ["@rules_dotnet//dotnet:defs"],
)

bzl_library(
    name = "dotnet.targeting_packs_extension",
    srcs = ["dotnet.targeting_packs_extension.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [":dotnet.targeting_packs"],
)

bzl_library(
    name = "targeting_pack_transition",
    srcs = ["targeting_pack_transition.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [":targeting_pack_lookup_table"],
)

bzl_library(
    name = "targeting_pack_lookup_table",
    srcs = ["targeting_pack_lookup_table.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)

bzl_library(
    name = "targeting_packs",
    srcs = ["targeting_packs.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)
